lab1/Test/L1-A-9-80.cmm
int uEsoIbpLCaqIG ( int , struct {
  int XssZ ;
  float PuX8b166bWrshd_Y ;
}b53syYxbSz_OAEwDzi ) {
  int kgzOmw2diEy2 [ 339972936 ] , = HhUN9IAuAXvOXbMZD3 
    ;
  return = dQ9_k58OkW || A <= ! Udq_g8lUvzNZyogtwH0j 
    ( KOs5iDJYOhCoiDxsxE , fbMiUg && dYAFFCWW9 - sxfjClsN16AypaAA 
    * - xga [ R != FRijUkVJtBKCq - NClh * ( VLDlPrj1uLRASiyvmA 
    = g4y0X5 || p9DZRfMRcImmz == vmyQnI3kz + ( g8 = YpDdO9WUSelueyM8Pis 
    = oh < B3rvit + ZP6cMK ( kT641pj51NyelXnokeGw && lyiuDKKB5AEbcfN 
    > FQqzuwLP1O ) ) . a3jw72NQMkEfCPcGynp ) + 969959411.1482104153 
    >= - O5NixNlyZgkz + ! IMIXqCt ( ) ] ) / - 367452049 
    . WNbsvfADAW5ADas1pLn ;
}
int ;
struct JrIN8ph32Xl {
};
struct yKyh UYkncMrjTD0GyD , xWoonF_83 

;
int H8eLky4wVe0cD9b0hL ( ) {
  RrvK1Waw_cSH ;
  if yAvlWlHs1OHQCUXMDA5s )   ezfLJNQg ;
else   if hgyC9IP6PVwPu )   if ( QTryC8u2pFc996f8ujR 
    )   Aju_P_2 ;
else   while ( mhhlHSFddXm )   BWRjjh8l1f_SEM7iq ;




  if ( m3 ) {
    uHhJLzBRWtqx5qj ;
  }
}
int ;
